--- a/index.ejs
+++ b/index.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <body>
         <div id='root'></div>
     </body>
